fix: package json script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "create-ist-app": "./index.ts"
     },
     "scripts": {
-        "start": "bun run index.ts"
+        "start": "bun run ./index.ts"
     },
     "keywords": [
         "CLI",
