--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
     "name": "create-ist-app",
-    "version": "1.0.1",
+    "version": "1.1.0",
     "author": "@renatorrocha",
-    "description": "Uma cli para criar projetos usando um template padrão do IST",
-    "module": "index.ts",
+    "description": "Uma CLI para criar projetos usando um template padrão do IST",
+    "main": "./build/index.js",
     "type": "module",
     "bin": {
-        "create-ist-app": "./index.ts"
+        "create-ist-app": "./build/index.js"
     },
     "scripts": {
-        "start": "bun run ./index.ts"
+        "start": "bun run ./index.ts",
+        "build": "bun build --entrypoints ./index.ts --outdir ./build --target node"
     },
     "keywords": [
         "CLI",
         "Bun",
-        "Typescript"
+        "TypeScript"
     ],
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
